# rocRoller

./: CMakeLists.txt  CMakePresets.json  CppCheckSuppressions.txt
.jenkins/: common.groovy
GPUArchitectureGenerator/: CMakeLists.txt
client/: CMakeLists.txt  gemm.cpp  test_gemm_client.py
client/include/: DataParallelGEMMSolution.hpp  GEMMParameters.hpp  StreamKGEMMSolution.hpp
cmake/: Dependencies.cmake
codeql/: create_database
include/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/rocRoller/: AssemblyKernel.hpp  AssemblyKernelArgument.hpp  AssemblyKernelArgument_fwd.hpp  AssemblyKernel_fwd.hpp  AssertOpKinds.hpp  CommandSolution.hpp  CommandSolution_fwd.hpp  CommonSubexpressionElim.hpp  Context.hpp  Context_fwd.hpp  ExecutableKernel.hpp  ExecutableKernel_fwd.hpp  Expression.hpp  ExpressionTransformations.hpp  Expression_fwd.hpp  Expression_impl.hpp  KernelArguments.hpp  KernelArguments_fwd.hpp  KernelOptions.hpp  KernelOptions_detail.hpp  ScheduledInstructions.hpp  ScheduledInstructions_fwd.hpp  TensorDescriptor.hpp  rocRoller.hpp
lib/include/rocRoller/Assemblers/: Assembler.hpp  Assembler_fwd.hpp  InProcessAssembler.hpp  SubprocessAssembler.hpp
lib/include/rocRoller/CodeGen/: Annotate.hpp  ArgumentLoader.hpp  ArgumentLoader_fwd.hpp  BranchGenerator.hpp  BranchGenerator_fwd.hpp  BranchGenerator_impl.hpp  Buffer.hpp  BufferInstructionOptions.hpp  CopyGenerator.hpp  CopyGenerator_fwd.hpp  CrashKernelGenerator.hpp  CrashKernelGenerator_fwd.hpp  GenerateNodes.hpp  Instruction.hpp  Instruction_fwd.hpp  Instruction_impl.hpp  LoadStoreTileGenerator.hpp  MemoryInstructions.hpp  MemoryInstructions_fwd.hpp  Utils.hpp  WaitCount.hpp  WaitCount_fwd.hpp
lib/include/rocRoller/DataTypes/: DataTypes.hpp  DataTypes_BF16_Utils.hpp  DataTypes_BF6.hpp  DataTypes_BF8.hpp  DataTypes_BFloat16.hpp  DataTypes_F6_Utils.hpp  DataTypes_F8_Utils.hpp  DataTypes_FP4.hpp  DataTypes_FP6.hpp  DataTypes_FP8.hpp  DataTypes_Half.hpp  DataTypes_Int8.hpp  DataTypes_Int8x4.hpp  DataTypes_UInt8x4.hpp  DataTypes_Utils.hpp  DistinctType.hpp
lib/include/rocRoller/GPUArchitecture/: GPUArchitecture.hpp  GPUArchitectureLibrary.hpp  GPUArchitectureLibrary_impl.hpp  GPUArchitectureTarget.hpp  GPUArchitectureTarget_fwd.hpp  GPUArchitecture_fwd.hpp  GPUCapability.hpp  GPUInstructionInfo.hpp  GPUInstructionInfo_fwd.hpp
lib/include/rocRoller/Graph/: GraphUtilities.hpp  Hypergraph.hpp  Hypergraph_impl.hpp
lib/include/rocRoller/InstructionValues/: LDSAllocator.hpp  LDSAllocator_fwd.hpp  LabelAllocator.hpp  LabelAllocator_fwd.hpp  Register.hpp  RegisterAllocator.hpp  RegisterAllocator_fwd.hpp  Register_fwd.hpp
lib/include/rocRoller/KernelGraph/: Constraints.hpp  ControlToCoordinateMapper.hpp  KernelGraph.hpp  KernelGraph_fwd.hpp  Policy.hpp  RegisterTagManager.hpp  RegisterTagManager_fwd.hpp  Reindexer.hpp  ScopeManager.hpp  ScopeManager_fwd.hpp  StructUtils.hpp  Utils.hpp  Visitors.hpp
lib/include/rocRoller/Operations/: BlockScale.hpp  BlockScale_fwd.hpp  Command.hpp  CommandArgument.hpp  CommandArgument_fwd.hpp  CommandArguments.hpp  Command_fwd.hpp  Operation.hpp  OperationTag.hpp  Operations.hpp  Operations_fwd.hpp  RandomNumberGenerator.hpp  T_Execute.hpp  T_Execute_fwd.hpp  T_LoadStore.hpp  T_Mul.hpp  TensorScalar.hpp  (+1 more)
lib/source/: CommandSolution.cpp  CommonSubexpressionElim.cpp  Expression.cpp  Expression_generate.cpp  Expression_toString.cpp  HIPTimer.cpp  KernelOptions.cpp  Scheduler.cpp
lib/source/CodeGen/: LoadStoreTileGenerator.cpp  LowerFromKernelGraph.cpp  MemoryInstructions.cpp
lib/source/Costs/: Cost.cpp
lib/source/ExpressionTransformations/: FastMultiplication.cpp  FuseTernary.cpp  Identity.cpp  LowerExponential.cpp  LowerPRNG.cpp  RestoreCommandArguments.cpp  Simplify.cpp
lib/source/KernelGraph/: KernelGraph.cpp  Utils.cpp
lib/source/Observers/: WaitcntObserver.cpp
lib/source/Schedulers/: CooperativeScheduler.cpp  PriorityScheduler.cpp  RandomScheduler.cpp  RoundRobinScheduler.cpp  SequentialScheduler.cpp
next-cmake/: CMakeLists.txt
next-cmake/GPUArchitectureGenerator/: CMakeLists.txt
next-cmake/host-library/: CMakeLists.txt
next-cmake/host-library/src/: CMakeLists.txt
next-cmake/host-library/src/Assemblers/: CMakeLists.txt
next-cmake/host-library/src/ExpressionTransformations/: CMakeLists.txt
next-cmake/host-library/src/Utilities/: CMakeLists.txt
next-cmake/include/: CMakeLists.txt
next-cmake/src/KernelGraph/Transformations/: CMakeLists.txt
next-cmake/test/: CMakeLists.txt
next-cmake/test/catch/: CMakeLists.txt
next-cmake/test/common/: CMakeLists.txt
scripts/lib/rrperf/: autoperf.py  problems.py  rrsuites.py
src/: CMakeLists.txt
src/Assemblers/: CMakeLists.txt
src/CodeGen/: CMakeLists.txt
src/CodeGen/Arithmetic/: CMakeLists.txt
src/Costs/: CMakeLists.txt
src/ExpressionTransformations/: CMakeLists.txt
src/KernelGraph/: CMakeLists.txt
src/KernelGraph/ControlGraph/: CMakeLists.txt
src/KernelGraph/CoordinateGraph/: CMakeLists.txt
src/KernelGraph/Transformations/: CMakeLists.txt
src/Observers/: CMakeLists.txt
src/Operations/: CMakeLists.txt
src/Schedulers/: CMakeLists.txt
src/Utilities/: CMakeLists.txt
test/: CMakeLists.txt
test/catch/: AddLDSPaddingTest.cpp  CMakeLists.txt  RegisterTagManagerTest.cpp  SettingsTest.cpp
test/common/: CMakeLists.txt
test/common/common/: GEMMProblem.hpp
test/unit/: CMakeLists.txt  DependencyTest.cpp  GEMMFusion.cpp  GEMMTest.cpp  LockTest.cpp  MatrixMultiplyTest.cpp  SchedulerTest.cpp  ScopeTest.cpp
(+194 files in other folders)
